      
- orm
    - proper error message is raised when trying to access
      expired instance attributes with no session present

    - added a mapper() flag "eager_defaults"; when set to
      True, defaults that are generated during an INSERT or
      UPDATE operation are post-fetched immediately, instead
      of being deferred until later.  This mimics the old 0.3
      behavior.

    - general improvements to the behavior of join() in 
      conjunction with polymorphic mappers, i.e. joining
      from/to polymorphic mappers and properly applying 
      aliases
      
    - fixed bug in polymorphic inheritance which made it 
      difficult to set a working "order_by" on a polymorphic
      mapper
    
    - fixed a rather expensive call in Query that was slowing
      down polymorphic queries
        
- general
    - warnings are now issued as type exceptions.SAWarning.

- dialects
    - finally added PGMacAddr type to postgres [ticket:580]

    - reflect the sequence associated to a PK field (tipically
      with a BEFORE INSERT trigger) under Firebird

0.4.2p3
------
- general
    - sub version numbering scheme changed to suite
      setuptools version number rules; easy_install -u
      should now get this version over 0.4.2.

- sql
    - Text type is properly exported now and does not
      raise a warning on DDL create; String types with no
      length only raise warnings during CREATE TABLE
      [ticket:912]

    - new UnicodeText type is added, to specify an
      encoded, unlengthed Text type

    - fixed bug in union() so that select() statements
      which don't derive from FromClause objects can be
      unioned

- orm
    - fixed bug with session.dirty when using "mutable
      scalars" (such as PickleTypes)

    - added a more descriptive error message when flushing
      on a relation() that has non-locally-mapped columns
      in its primary or secondary join condition

- dialects
    - Fixed reflection of mysql empty string column